// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DustFilter calls setDust if the form is submitted: 200 1`] = `
<DustFilter
  dust={1600}
  maxDust={50000}
  ownedDust={2000}
  setDust={
    [MockFunction] {
      "calls": Array [
        Array [
          200,
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
>
  <form
    className="dust-filter"
    onSubmit={[Function]}
  >
    <Component
      isActive={[Function]}
      onClick={[Function]}
      type="common"
    >
      <DustPreset
        i18n={
          Object {
            "hasResourceBundle": [Function],
          }
        }
        isActive={[Function]}
        onClick={[Function]}
        t={[Function]}
        type="common"
      >
        <Tooltip
          content="Spend 40 dust"
          noSrTooltip={true}
          simple={true}
        >
          <div
            className="tooltip-wrapper"
            onMouseLeave={[Function]}
            onMouseMove={[Function]}
            onTouchStart={[Function]}
          >
            <img
              className="dust-preset"
              onClick={[Function]}
              src="/static/images/rarity-icons/rarity-common.png"
            />
          </div>
        </Tooltip>
      </DustPreset>
    </Component>
    <Component
      isActive={[Function]}
      onClick={[Function]}
      type="rare"
    >
      <DustPreset
        i18n={
          Object {
            "hasResourceBundle": [Function],
          }
        }
        isActive={[Function]}
        onClick={[Function]}
        t={[Function]}
        type="rare"
      >
        <Tooltip
          content="Spend 100 dust"
          noSrTooltip={true}
          simple={true}
        >
          <div
            className="tooltip-wrapper"
            onMouseLeave={[Function]}
            onMouseMove={[Function]}
            onTouchStart={[Function]}
          >
            <img
              className="dust-preset"
              onClick={[Function]}
              src="/static/images/rarity-icons/rarity-rare.png"
            />
          </div>
        </Tooltip>
      </DustPreset>
    </Component>
    <Component
      isActive={[Function]}
      onClick={[Function]}
      type="epic"
    >
      <DustPreset
        i18n={
          Object {
            "hasResourceBundle": [Function],
          }
        }
        isActive={[Function]}
        onClick={[Function]}
        t={[Function]}
        type="epic"
      >
        <Tooltip
          content="Spend 400 dust"
          noSrTooltip={true}
          simple={true}
        >
          <div
            className="tooltip-wrapper"
            onMouseLeave={[Function]}
            onMouseMove={[Function]}
            onTouchStart={[Function]}
          >
            <img
              className="dust-preset"
              onClick={[Function]}
              src="/static/images/rarity-icons/rarity-epic.png"
            />
          </div>
        </Tooltip>
      </DustPreset>
    </Component>
    <Component
      isActive={[Function]}
      onClick={[Function]}
      type="legendary"
    >
      <DustPreset
        i18n={
          Object {
            "hasResourceBundle": [Function],
          }
        }
        isActive={[Function]}
        onClick={[Function]}
        t={[Function]}
        type="legendary"
      >
        <Tooltip
          content="Spend 1600 dust"
          noSrTooltip={true}
          simple={true}
        >
          <div
            className="tooltip-wrapper"
            onMouseLeave={[Function]}
            onMouseMove={[Function]}
            onTouchStart={[Function]}
          >
            <img
              className="dust-preset active"
              onClick={[Function]}
              src="/static/images/rarity-icons/rarity-legendary.png"
            />
          </div>
        </Tooltip>
      </DustPreset>
    </Component>
    <Component
      isActive={[Function]}
      onClick={[Function]}
      type="owned"
      value={2000}
    >
      <DustPreset
        i18n={
          Object {
            "hasResourceBundle": [Function],
          }
        }
        isActive={[Function]}
        onClick={[Function]}
        t={[Function]}
        type="owned"
        value={2000}
      >
        <Tooltip
          content="Spend all your dust (2000)"
          noSrTooltip={true}
          simple={true}
        >
          <div
            className="tooltip-wrapper"
            onMouseLeave={[Function]}
            onMouseMove={[Function]}
            onTouchStart={[Function]}
          >
            <img
              className="dust-preset"
              onClick={[Function]}
              src="/static/images/dust.png"
            />
          </div>
        </Tooltip>
      </DustPreset>
    </Component>
    <input
      className="form-control"
      max={50000}
      min={0}
      onBlur={[Function]}
      onChange={[Function]}
      step={5}
      type="number"
      value="1600"
    />
  </form>
</DustFilter>
`;

exports[`DustFilter calls setDust if the form is submitted: 1600 1`] = `
<DustFilter
  dust={1600}
  maxDust={50000}
  ownedDust={2000}
  setDust={[MockFunction]}
>
  <form
    className="dust-filter"
    onSubmit={[Function]}
  >
    <Component
      isActive={[Function]}
      onClick={[Function]}
      type="common"
    >
      <DustPreset
        i18n={
          Object {
            "hasResourceBundle": [Function],
          }
        }
        isActive={[Function]}
        onClick={[Function]}
        t={[Function]}
        type="common"
      >
        <Tooltip
          content="Spend 40 dust"
          noSrTooltip={true}
          simple={true}
        >
          <div
            className="tooltip-wrapper"
            onMouseLeave={[Function]}
            onMouseMove={[Function]}
            onTouchStart={[Function]}
          >
            <img
              className="dust-preset"
              onClick={[Function]}
              src="/static/images/rarity-icons/rarity-common.png"
            />
          </div>
        </Tooltip>
      </DustPreset>
    </Component>
    <Component
      isActive={[Function]}
      onClick={[Function]}
      type="rare"
    >
      <DustPreset
        i18n={
          Object {
            "hasResourceBundle": [Function],
          }
        }
        isActive={[Function]}
        onClick={[Function]}
        t={[Function]}
        type="rare"
      >
        <Tooltip
          content="Spend 100 dust"
          noSrTooltip={true}
          simple={true}
        >
          <div
            className="tooltip-wrapper"
            onMouseLeave={[Function]}
            onMouseMove={[Function]}
            onTouchStart={[Function]}
          >
            <img
              className="dust-preset"
              onClick={[Function]}
              src="/static/images/rarity-icons/rarity-rare.png"
            />
          </div>
        </Tooltip>
      </DustPreset>
    </Component>
    <Component
      isActive={[Function]}
      onClick={[Function]}
      type="epic"
    >
      <DustPreset
        i18n={
          Object {
            "hasResourceBundle": [Function],
          }
        }
        isActive={[Function]}
        onClick={[Function]}
        t={[Function]}
        type="epic"
      >
        <Tooltip
          content="Spend 400 dust"
          noSrTooltip={true}
          simple={true}
        >
          <div
            className="tooltip-wrapper"
            onMouseLeave={[Function]}
            onMouseMove={[Function]}
            onTouchStart={[Function]}
          >
            <img
              className="dust-preset"
              onClick={[Function]}
              src="/static/images/rarity-icons/rarity-epic.png"
            />
          </div>
        </Tooltip>
      </DustPreset>
    </Component>
    <Component
      isActive={[Function]}
      onClick={[Function]}
      type="legendary"
    >
      <DustPreset
        i18n={
          Object {
            "hasResourceBundle": [Function],
          }
        }
        isActive={[Function]}
        onClick={[Function]}
        t={[Function]}
        type="legendary"
      >
        <Tooltip
          content="Spend 1600 dust"
          noSrTooltip={true}
          simple={true}
        >
          <div
            className="tooltip-wrapper"
            onMouseLeave={[Function]}
            onMouseMove={[Function]}
            onTouchStart={[Function]}
          >
            <img
              className="dust-preset active"
              onClick={[Function]}
              src="/static/images/rarity-icons/rarity-legendary.png"
            />
          </div>
        </Tooltip>
      </DustPreset>
    </Component>
    <Component
      isActive={[Function]}
      onClick={[Function]}
      type="owned"
      value={2000}
    >
      <DustPreset
        i18n={
          Object {
            "hasResourceBundle": [Function],
          }
        }
        isActive={[Function]}
        onClick={[Function]}
        t={[Function]}
        type="owned"
        value={2000}
      >
        <Tooltip
          content="Spend all your dust (2000)"
          noSrTooltip={true}
          simple={true}
        >
          <div
            className="tooltip-wrapper"
            onMouseLeave={[Function]}
            onMouseMove={[Function]}
            onTouchStart={[Function]}
          >
            <img
              className="dust-preset"
              onClick={[Function]}
              src="/static/images/dust.png"
            />
          </div>
        </Tooltip>
      </DustPreset>
    </Component>
    <input
      className="form-control"
      max={50000}
      min={0}
      onBlur={[Function]}
      onChange={[Function]}
      step={5}
      type="number"
      value="1600"
    />
  </form>
</DustFilter>
`;

exports[`DustFilter calls setDust if the input is blurred: 200 1`] = `
<DustFilter
  dust={1600}
  maxDust={50000}
  ownedDust={2000}
  setDust={
    [MockFunction] {
      "calls": Array [
        Array [
          200,
        ],
      ],
      "results": Array [
        Object {
          "isThrow": false,
          "value": undefined,
        },
      ],
    }
  }
>
  <form
    className="dust-filter"
    onSubmit={[Function]}
  >
    <Component
      isActive={[Function]}
      onClick={[Function]}
      type="common"
    >
      <DustPreset
        i18n={
          Object {
            "hasResourceBundle": [Function],
          }
        }
        isActive={[Function]}
        onClick={[Function]}
        t={[Function]}
        type="common"
      >
        <Tooltip
          content="Spend 40 dust"
          noSrTooltip={true}
          simple={true}
        >
          <div
            className="tooltip-wrapper"
            onMouseLeave={[Function]}
            onMouseMove={[Function]}
            onTouchStart={[Function]}
          >
            <img
              className="dust-preset"
              onClick={[Function]}
              src="/static/images/rarity-icons/rarity-common.png"
            />
          </div>
        </Tooltip>
      </DustPreset>
    </Component>
    <Component
      isActive={[Function]}
      onClick={[Function]}
      type="rare"
    >
      <DustPreset
        i18n={
          Object {
            "hasResourceBundle": [Function],
          }
        }
        isActive={[Function]}
        onClick={[Function]}
        t={[Function]}
        type="rare"
      >
        <Tooltip
          content="Spend 100 dust"
          noSrTooltip={true}
          simple={true}
        >
          <div
            className="tooltip-wrapper"
            onMouseLeave={[Function]}
            onMouseMove={[Function]}
            onTouchStart={[Function]}
          >
            <img
              className="dust-preset"
              onClick={[Function]}
              src="/static/images/rarity-icons/rarity-rare.png"
            />
          </div>
        </Tooltip>
      </DustPreset>
    </Component>
    <Component
      isActive={[Function]}
      onClick={[Function]}
      type="epic"
    >
      <DustPreset
        i18n={
          Object {
            "hasResourceBundle": [Function],
          }
        }
        isActive={[Function]}
        onClick={[Function]}
        t={[Function]}
        type="epic"
      >
        <Tooltip
          content="Spend 400 dust"
          noSrTooltip={true}
          simple={true}
        >
          <div
            className="tooltip-wrapper"
            onMouseLeave={[Function]}
            onMouseMove={[Function]}
            onTouchStart={[Function]}
          >
            <img
              className="dust-preset"
              onClick={[Function]}
              src="/static/images/rarity-icons/rarity-epic.png"
            />
          </div>
        </Tooltip>
      </DustPreset>
    </Component>
    <Component
      isActive={[Function]}
      onClick={[Function]}
      type="legendary"
    >
      <DustPreset
        i18n={
          Object {
            "hasResourceBundle": [Function],
          }
        }
        isActive={[Function]}
        onClick={[Function]}
        t={[Function]}
        type="legendary"
      >
        <Tooltip
          content="Spend 1600 dust"
          noSrTooltip={true}
          simple={true}
        >
          <div
            className="tooltip-wrapper"
            onMouseLeave={[Function]}
            onMouseMove={[Function]}
            onTouchStart={[Function]}
          >
            <img
              className="dust-preset active"
              onClick={[Function]}
              src="/static/images/rarity-icons/rarity-legendary.png"
            />
          </div>
        </Tooltip>
      </DustPreset>
    </Component>
    <Component
      isActive={[Function]}
      onClick={[Function]}
      type="owned"
      value={2000}
    >
      <DustPreset
        i18n={
          Object {
            "hasResourceBundle": [Function],
          }
        }
        isActive={[Function]}
        onClick={[Function]}
        t={[Function]}
        type="owned"
        value={2000}
      >
        <Tooltip
          content="Spend all your dust (2000)"
          noSrTooltip={true}
          simple={true}
        >
          <div
            className="tooltip-wrapper"
            onMouseLeave={[Function]}
            onMouseMove={[Function]}
            onTouchStart={[Function]}
          >
            <img
              className="dust-preset"
              onClick={[Function]}
              src="/static/images/dust.png"
            />
          </div>
        </Tooltip>
      </DustPreset>
    </Component>
    <input
      className="form-control"
      max={50000}
      min={0}
      onBlur={[Function]}
      onChange={[Function]}
      step={5}
      type="number"
      value="1600"
    />
  </form>
</DustFilter>
`;

exports[`DustFilter calls setDust if the input is blurred: 1600 1`] = `
<DustFilter
  dust={1600}
  maxDust={50000}
  ownedDust={2000}
  setDust={[MockFunction]}
>
  <form
    className="dust-filter"
    onSubmit={[Function]}
  >
    <Component
      isActive={[Function]}
      onClick={[Function]}
      type="common"
    >
      <DustPreset
        i18n={
          Object {
            "hasResourceBundle": [Function],
          }
        }
        isActive={[Function]}
        onClick={[Function]}
        t={[Function]}
        type="common"
      >
        <Tooltip
          content="Spend 40 dust"
          noSrTooltip={true}
          simple={true}
        >
          <div
            className="tooltip-wrapper"
            onMouseLeave={[Function]}
            onMouseMove={[Function]}
            onTouchStart={[Function]}
          >
            <img
              className="dust-preset"
              onClick={[Function]}
              src="/static/images/rarity-icons/rarity-common.png"
            />
          </div>
        </Tooltip>
      </DustPreset>
    </Component>
    <Component
      isActive={[Function]}
      onClick={[Function]}
      type="rare"
    >
      <DustPreset
        i18n={
          Object {
            "hasResourceBundle": [Function],
          }
        }
        isActive={[Function]}
        onClick={[Function]}
        t={[Function]}
        type="rare"
      >
        <Tooltip
          content="Spend 100 dust"
          noSrTooltip={true}
          simple={true}
        >
          <div
            className="tooltip-wrapper"
            onMouseLeave={[Function]}
            onMouseMove={[Function]}
            onTouchStart={[Function]}
          >
            <img
              className="dust-preset"
              onClick={[Function]}
              src="/static/images/rarity-icons/rarity-rare.png"
            />
          </div>
        </Tooltip>
      </DustPreset>
    </Component>
    <Component
      isActive={[Function]}
      onClick={[Function]}
      type="epic"
    >
      <DustPreset
        i18n={
          Object {
            "hasResourceBundle": [Function],
          }
        }
        isActive={[Function]}
        onClick={[Function]}
        t={[Function]}
        type="epic"
      >
        <Tooltip
          content="Spend 400 dust"
          noSrTooltip={true}
          simple={true}
        >
          <div
            className="tooltip-wrapper"
            onMouseLeave={[Function]}
            onMouseMove={[Function]}
            onTouchStart={[Function]}
          >
            <img
              className="dust-preset"
              onClick={[Function]}
              src="/static/images/rarity-icons/rarity-epic.png"
            />
          </div>
        </Tooltip>
      </DustPreset>
    </Component>
    <Component
      isActive={[Function]}
      onClick={[Function]}
      type="legendary"
    >
      <DustPreset
        i18n={
          Object {
            "hasResourceBundle": [Function],
          }
        }
        isActive={[Function]}
        onClick={[Function]}
        t={[Function]}
        type="legendary"
      >
        <Tooltip
          content="Spend 1600 dust"
          noSrTooltip={true}
          simple={true}
        >
          <div
            className="tooltip-wrapper"
            onMouseLeave={[Function]}
            onMouseMove={[Function]}
            onTouchStart={[Function]}
          >
            <img
              className="dust-preset active"
              onClick={[Function]}
              src="/static/images/rarity-icons/rarity-legendary.png"
            />
          </div>
        </Tooltip>
      </DustPreset>
    </Component>
    <Component
      isActive={[Function]}
      onClick={[Function]}
      type="owned"
      value={2000}
    >
      <DustPreset
        i18n={
          Object {
            "hasResourceBundle": [Function],
          }
        }
        isActive={[Function]}
        onClick={[Function]}
        t={[Function]}
        type="owned"
        value={2000}
      >
        <Tooltip
          content="Spend all your dust (2000)"
          noSrTooltip={true}
          simple={true}
        >
          <div
            className="tooltip-wrapper"
            onMouseLeave={[Function]}
            onMouseMove={[Function]}
            onTouchStart={[Function]}
          >
            <img
              className="dust-preset"
              onClick={[Function]}
              src="/static/images/dust.png"
            />
          </div>
        </Tooltip>
      </DustPreset>
    </Component>
    <input
      className="form-control"
      max={50000}
      min={0}
      onBlur={[Function]}
      onChange={[Function]}
      step={5}
      type="number"
      value="1600"
    />
  </form>
</DustFilter>
`;

exports[`DustFilter renders correctly 1`] = `
<form
  className="dust-filter"
  onSubmit={[Function]}
>
  <div
    className="tooltip-wrapper"
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onTouchStart={[Function]}
  >
    <img
      className="dust-preset"
      onClick={[Function]}
      src="/static/images/rarity-icons/rarity-common.png"
    />
  </div>
  <div
    className="tooltip-wrapper"
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onTouchStart={[Function]}
  >
    <img
      className="dust-preset"
      onClick={[Function]}
      src="/static/images/rarity-icons/rarity-rare.png"
    />
  </div>
  <div
    className="tooltip-wrapper"
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onTouchStart={[Function]}
  >
    <img
      className="dust-preset"
      onClick={[Function]}
      src="/static/images/rarity-icons/rarity-epic.png"
    />
  </div>
  <div
    className="tooltip-wrapper"
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onTouchStart={[Function]}
  >
    <img
      className="dust-preset active"
      onClick={[Function]}
      src="/static/images/rarity-icons/rarity-legendary.png"
    />
  </div>
  <div
    className="tooltip-wrapper"
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onTouchStart={[Function]}
  >
    <img
      className="dust-preset"
      onClick={[Function]}
      src="/static/images/dust.png"
    />
  </div>
  <input
    className="form-control"
    max={50000}
    min={0}
    onBlur={[Function]}
    onChange={[Function]}
    step={5}
    type="number"
    value="1600"
  />
</form>
`;
